# tiny_renderer

./: .gitignore  CMakeLists.txt  README.md
figures/: render.ppm
src/: main.cpp  tools.cpp  tools.hpp
